src/main/metadata-au/objects/Claim__c.object
<CustomObject>
    <fields>
        <fullName>Accident_date__c</fullName>
        <label>Accident date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_By_EP_Transaction__c</fullName>
        <label>Created By EP Transaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, 'AU') ,'AU', 
IF(ISPICKVAL($User.Market__c, 'CN'), 'CN', 
IF(ISPICKVAL($User.Market__c, 'JP'), 'JP','NA')))</defaultValue>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_amount__c</fullName>
        <label>Payment amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <label>Policy Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contract</label>
        <referenceTo>Retail_Task__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Contents__c</fullName>
        <label>Service Content</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_By_EP_Transaction__c</fullName>
        <label>Updated By EP Transaction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_By_EP_Transactions__c</fullName>
        <label>Updated By EP Transactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Claim</label>
    <nameField>
        <label>Claim Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <recordTypes>
        <fullName>Insurance_Claim</fullName>
        <active>true</active>
        <label>Insurance Claim</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>  